# QObjectInMultiLibrarySetup

./: CMakeLists.txt
source/CompA/: ClassA.cpp  ClassA.h  export.h
source/CompB/: ClassB.cpp  ClassB.h  export.h
source/CompC/: ClassC.cpp  ClassC.h  export.h
source/CompD/: ClassD.cpp  ClassD.h  export.h
source/Exe/: Application.cpp  Application.h  main.cpp
source/LibA/: Foo.cpp  Foo.h  export.h
source/Programm/: Application.cpp
